tests/test_scope/good/sub_scope.catala_en
## Article

```catala
declaration scope A:
  context output a content integer
  context output b content boolean
  context output a_base content integer

declaration scope B:
  context output a content integer
  context output b content boolean
  scopeA scope A
  scopeAbis scope A

scope A:
  definition a_base equals 1
  definition a equals -1
  definition b equals a > 0

scope B:
  definition a equals 42
  definition b equals scopeA.b
  definition scopeA.a under condition a > 0 consequence equals scopeAbis.a_base
```



```catala-test-inline
$ catala Typecheck --check-invariants
[RESULT] Invariant typing_defaults checked. result: [138/138]
[RESULT] Invariant match_inversion checked. result: [0/0]
[RESULT] Invariant app_inversion checked. result: [7/7]
[RESULT] Invariant no_return_a_function checked. result: [6/6]
[RESULT] Invariant no_partial_evaluation checked. result: [7/7]
[RESULT] Invariant default_no_arrow checked. result: [17/17]
[RESULT] Typechecking successful!
```

```catala-test-inline
$ catala Interpret -s A
[RESULT] Computation successful! Results:
[RESULT] a = -1
[RESULT] a_base = 1
[RESULT] b = false
```

```catala-test-inline
$ catala Interpret -s B
[RESULT] Computation successful! Results:
[RESULT] a = 42
[RESULT] b = true
```
```catala-test-inline
$ catala Interpret_Lcalc -s A --avoid-exceptions --optimize
[RESULT] Computation successful! Results:
[RESULT] a = -1
[RESULT] a_base = 1
[RESULT] b = false
```
```catala-test-inline
$ catala Interpret_Lcalc -s B --avoid-exceptions --optimize
[RESULT] Computation successful! Results:
[RESULT] a = 42
[RESULT] b = true
```
